--- a/app/styles/sass/_config.sass
+++ b/app/styles/sass/_config.sass
@@ -10,7 +10,10 @@ $lineheight: 1.65 // Document Line Height
 $userfont: raleway-tm, sans-serif // User Font Family
 $titlefont: montserrat-tm, sans-serif
 $systemfont: -apple-system, BlinkMacSystemFont, Arial, sans-serif // System Font Family
+
 $index: calc((1vw + 1vh))
+$coaficent-md: 1.5
+$coaficent-sm: 2
 
 // Bootstrap compatible gutter variable => $gutter
 $grid-gutter-width: 30px
