--- a/app/styles/sass/blocks/example-block.scss
+++ b/app/styles/sass/blocks/example-block.scss
@@ -6,16 +6,17 @@
 	gap: calc($index * 0.34);
 	height: 100vh;
 	&__left {
-		position:absolute;
-		top: calc($index * .33 );
-		left: -100%;
-		bottom: calc($index * .33 );
+		position: absolute;
+		top: calc($index * 0.33);
+
+		bottom: calc($index * 0.33);
 		max-width: calc($index * 23);
 		padding-top: calc($index * 1.6);
+		left: -100%;
 		display: flex;
 		flex-direction: column;
-		overflow-y:auto;
-		transition: left .4s ease;
+		overflow-y: auto;
+		transition: left 0.4s ease;
 		z-index: 100;
 	}
 
@@ -36,9 +37,9 @@
 	position: relative;
 	width: 100%;
 	flex: 1 1 auto;
-	padding: calc($index * .7) calc($index * .7);
-	
-	border-bottom: calc($index * 0.34) solid  #2c2c2c;
+	padding: calc($index * 0.7) calc($index * 0.7);
+
+	border-bottom: calc($index * 0.34) solid #2c2c2c;
 	&__body {
 		position: relative;
 		min-height: 100%;
@@ -51,7 +52,7 @@
 
 .header__right-top {
 	display: flex;
-	gap: calc($index * .9);
+	gap: calc($index * 0.9);
 	align-items: center;
 }
 
@@ -61,11 +62,11 @@
 	display: flex;
 	align-items: center;
 	justify-content: center;
-	min-height: calc($index * 1.7);
+	min-height: calc($index * 1.7 * $coaficent-sm);
 	overflow: hidden;
 	padding: 0;
 	p {
-		font-size: calc($index * 0.67);
+		font-size: calc($index * 0.67 * $coaficent-sm);
 		position: absolute;
 		width: 100%;
 		white-space: nowrap;
@@ -90,16 +91,38 @@
 	&::after {
 		right: 0;
 	}
+	@include media-breakpoint-up(sm) {
+		min-height: calc($index * 1.7 * $coaficent-md);
+		p {
+			font-size: calc($index * 0.67 * $coaficent-md);
+		}
+		&::before,
+		&::after {
+			width: calc($index * 0.33 * $coaficent-md);
+		}
+	}
+	@include media-breakpoint-up(lg) {
+		min-height: calc($index * 1.7);
+		p {
+			font-size: calc($index * 0.67);
+		}
+		&::before,
+		&::after {
+			width: calc($index * 0.33);
+		}
+	}
 }
 
 .page-content {
 	// .page-content__container
 
 	&__container {
-		max-width: 90%;
+		max-width: 95%;
 		margin: 0 auto;
 		height: calc(100% - 60px);
-		height: 100%;
+		@include media-breakpoint-up(lg) {
+			max-width: 90%;
+		}
 	}
 
 	// .page-content__title
@@ -114,13 +137,16 @@
 	justify-content: center;
 	align-items: center;
 	height: 100%;
+	min-height: calc($index * 19.5);
 	padding: calc($index * 0.34);
 	// .start-block__title
 
 	// .start-block__logo
 
 	&__logo {
+		position: relative;
 		width: calc($index * 5.7);
+		height: calc($index * 4.1);
 		margin-left: auto;
 		margin-top: 0;
 		margin-right: auto;
@@ -133,7 +159,7 @@
 	}
 
 	&__title {
-		margin-bottom: calc($index * .8);
+		margin-bottom: calc($index * 0.8);
 		h1 {
 			font-family: $titlefont;
 			font-weight: 100;
@@ -153,7 +179,6 @@
 		}
 	}
 	&__button {
-
 	}
 }
 
@@ -163,31 +188,54 @@
 	// .page-content__container
 
 	&__container {
-
 	}
 
 	// .page-content__title
 
 	&__title {
 		color: rgba($white, 0.75);
-		margin-bottom: calc($index * 1);
+		margin-bottom: calc($index * 1 * $coaficent-sm);
 		h2 {
 			font-style: normal;
 			font-weight: 300;
-			font-size: calc($index * 1.067);
+			font-size: calc($index * 1.067 * $coaficent-sm);
 			line-height: 1.3;
 			text-align: center;
 			border-bottom: 1px solid rgba($white, 0.05);
-			padding-bottom: calc($index * .5);
+			padding-bottom: calc($index * 0.5 * $coaficent-sm);
 		}
 		p {
 			font-weight: 300;
-			font-size: calc($index * .8);
+			font-size: calc($index * 0.8 * $coaficent-sm);
 			line-height: 1.3;
 			text-align: center;
-			max-width: calc($index * 27.3);
-			margin: calc($index * .66) auto 0 auto;
-		 }
+			max-width: calc($index * 27.3 * $coaficent-sm);
+			margin: calc($index * 0.66 * $coaficent-sm) auto 0 auto;
+		}
+		@include media-breakpoint-up(sm) {
+			margin-bottom: calc($index * 1 * $coaficent-md);
+			h2 {
+				font-size: calc($index * 1.067 * $coaficent-md);
+				padding-bottom: calc($index * 0.5 * $coaficent-md);
+			}
+			p {
+				font-size: calc($index * 0.8 * $coaficent-md);
+				max-width: calc($index * 27.3 * $coaficent-md);
+				margin: calc($index * 0.66 * $coaficent-md) auto 0 auto;
+			}
+		}
+		@include media-breakpoint-up(lg) {
+			margin-bottom: calc($index * 1);
+			h2 {
+				font-size: calc($index * 1.067);
+				padding-bottom: calc($index * 0.5);
+			}
+			p {
+				font-size: calc($index * 0.8);
+				max-width: calc($index * 27.3);
+				margin: calc($index * 0.66) auto 0 auto;
+			}
+		}
 	}
 }
 
@@ -195,16 +243,62 @@
 	display: flex;
 	align-items: center;
 	justify-content: center;
-	padding: calc($index * 0.5);
+	padding: calc($index * 0.5 * $coaficent-sm);
 	overflow: hidden;
-	margin-right: calc($index * 2.33);
-	margin-left: calc($index * 2.33);
+	margin-right: calc($index * 0.33);
+	margin-left: calc($index * 0.33);
 	p {
 		font-weight: 400;
-		font-size: calc($index * 0.67);
+		font-size: calc($index * 0.67 * $coaficent-sm);
 		line-height: 1.1;
 		text-align: center;
 		margin: 0;
 		opacity: 0.75;
+	}
+	@include media-breakpoint-up(sm) {
+		margin-right: calc($index * 0.33);
+	margin-left: calc($index * 0.33);
+		p {
+			font-size: calc($index * 0.67 * $coaficent-md);
+		}
+	}
+	@include media-breakpoint-up(lg) {
+		padding: calc($index * 0.5);
+		margin-right: calc($index * 2.33);
+		margin-left: calc($index * 2.33);
+		p {
+			font-size: calc($index * 0.67);
+		}
+	}
+}
+
+.button {
+	padding: calc($index * 0.5 * $coaficent-sm)
+		calc($index * 1.55 * $coaficent-sm);
+	white-space: nowrap;
+	font-weight: 500;
+	font-size: calc($index * 0.535 * $coaficent-sm);
+	line-height: 1.2;
+	text-align: center;
+	text-transform: uppercase;
+	color: #8e8e8e;
+	background-color: $button-bg;
+	border: none;
+	appearance: none;
+	user-select: none;
+	transition: background-color 0.25s ease;
+	@media (any-hover: hover) {
+		&:hover {
+			background-color: darken($button-bg, 3%);
+		}
+	}
+	@include media-breakpoint-up(sm) {
+		padding: calc($index * 0.5 * $coaficent-md)
+			calc($index * 1.55 * $coaficent-md);
+		font-size: calc($index * 0.535 * $coaficent-md);
+	}
+	@include media-breakpoint-up(lg) {
+		padding: calc($index * 0.5) calc($index * 1.55);
+		font-size: calc($index * 0.535);
 	}
 }
