--- a/app/styles/sass/blocks/example-block.scss
+++ b/app/styles/sass/blocks/example-block.scss
@@ -8,16 +8,32 @@
 	&__left {
 		position: absolute;
 		top: calc($index * 0.33);
-
 		bottom: calc($index * 0.33);
 		max-width: calc($index * 23);
-		padding-top: calc($index * 1.6);
+		padding-top: calc($index * 1.5);
 		left: -100%;
 		display: flex;
 		flex-direction: column;
 		overflow-y: auto;
 		transition: left 0.4s ease;
 		z-index: 100;
+		&::before {
+			content: "";
+			display: block;
+			position: absolute;
+			top: 0;
+			left: 0;
+			height: calc($index * 1.9 * $coaficent-sm);
+			width: 100%;
+			background-color: #303030;
+			z-index: 100;
+			@include media-breakpoint-up(sm) {
+				height: calc($index * 1.9 * $coaficent-md);
+			}
+			@include media-breakpoint-up(lg) {
+				height: calc($index * 1.9);
+			}
+		}
 	}
 
 	&__left._active {
@@ -52,7 +68,7 @@
 
 .header__right-top {
 	display: flex;
-	gap: calc($index * 0.9);
+	gap: calc($index * 0.7);
 	align-items: center;
 }
 
@@ -119,7 +135,6 @@
 	&__container {
 		max-width: 95%;
 		margin: 0 auto;
-		height: calc(100% - 60px);
 		@include media-breakpoint-up(lg) {
 			max-width: 90%;
 		}
@@ -188,6 +203,7 @@
 	// .page-content__container
 
 	&__container {
+		min-height: 100%;
 	}
 
 	// .page-content__title
@@ -257,7 +273,7 @@
 	}
 	@include media-breakpoint-up(sm) {
 		margin-right: calc($index * 0.33);
-	margin-left: calc($index * 0.33);
+		margin-left: calc($index * 0.33);
 		p {
 			font-size: calc($index * 0.67 * $coaficent-md);
 		}
