--- a/app/styles/sass/blocks/navigation.scss
+++ b/app/styles/sass/blocks/navigation.scss
@@ -34,7 +34,7 @@
 		position: absolute;
 		top: 0;
 		left: 0;
-		height: calc($index * 2.33);
+		height: calc($index * 2.33 * $coaficent-sm);
 		width: 100%;
 		background-color: #303030;
 		z-index: 100;
