--- a/app/styles/sass/blocks/settings.scss
+++ b/app/styles/sass/blocks/settings.scss
@@ -208,6 +208,10 @@
 		border: 1px solid #fff;
 		opacity: 0.25;
 		transition: opacity 0.25s ease;
+
+		background-position: center center;
+		background-repeat: no-repeat;
+		background-size: 60%;
 		&:not(:last-child) {
 			margin-bottom: calc($index * 1.34);
 		}
@@ -216,50 +220,26 @@
 				opacity: 0.5;
 			}
 		}
-		&::before {
-			content: "";
-			position: absolute;
-			top: calc($index * 0.23);
-			right: calc($index * 0.23);
-			bottom: calc($index * 0.23);
-			left: calc($index * 0.23);
-			display: block;
-			background-position: center center;
-			background-repeat: no-repeat;
-			background-size: cover;
-		}
 		&._active {
 			animation: iconAnimation 2.5s infinite ease;
 		}
 		&:nth-child(1) {
-			&::before {
-				background-image: url(../images/dist/icons/rocket.svg);
-			}
+			background-image: url(../images/dist/icons/rocket.svg);
 		}
 		&:nth-child(2) {
-			&::before {
-				background-image: url(../images/dist/icons/gear.svg);
-			}
+			background-image: url(../images/dist/icons/gear.svg);
 		}
 		&:nth-child(3) {
-			&::before {
-				background-image: url(../images/dist/icons/sand-clock.svg);
-			}
+			background-image: url(../images/dist/icons/sand-clock.svg);
 		}
 		&:nth-child(4) {
-			&::before {
-				background-image: url(../images/dist/icons/handshake.svg);
-			}
+			background-image: url(../images/dist/icons/handshake.svg);
 		}
 		&:nth-child(5) {
-			&::before {
-				background-image: url(../images/dist/icons/communication.svg);
-			}
+			background-image: url(../images/dist/icons/communication.svg);
 		}
 		&:nth-child(6) {
-			&::before {
-				background-image: url(../images/dist/icons/bow-tie.svg);
-			}
+			background-image: url(../images/dist/icons/bow-tie.svg);
 		}
 	}
 }
@@ -277,35 +257,33 @@
 }
 
 .settings-panel-left {
-display: none;
+	display: none;
+	position: absolute;
+	top: calc($index * 0.33);
+	bottom: calc($index * 0.33);
+	left: 0;
+	padding: calc($index * 2.5) calc($index * 0.5) calc($index * 0.33);
+
+	&__bonus {
+		width: calc($index * 1.33);
+		height: calc($index * 1.33);
+		border: 1px solid rgba(#fff, 0.25);
+		background-position: center center;
+		background-repeat: no-repeat;
+		background-size: 70%;
+		background-image: url(../images/dist/icons/bonus-diamond.png);
+		margin-bottom: calc($index * 3.33);
+		transition: border 0.25s ease;
+		@media (any-hover: hover) {
+			&:hover {
+				border: 1px solid rgba(#fff, 0.5);
+			}
+		}
+	}
 }
 @include media-breakpoint-up(lg) {
 	.settings-panel-left {
-		position: absolute;
-		top: calc($index * 0.33);
-		bottom: calc($index * 0.33);
-		left: 0;
-		display: flex;
-		flex-direction: column;
-		align-items: center;
-		padding: calc($index * 2.5) calc($index * 0.5) calc($index * 0.33);
-	
-		&__bonus {
-			width: calc($index * 1.33);
-			height: calc($index * 1.33);
-			border: 1px solid rgba(#fff, 0.25);
-			background-position: center center;
-			background-repeat: no-repeat;
-			background-size: calc($index * 0.93);
-			background-image: url(../images/dist/icons/bonus-diamond.png);
-			margin-bottom: calc($index * 3.33);
-			transition: border 0.25s ease;
-			@media (any-hover: hover) {
-				&:hover {
-					border: 1px solid rgba(#fff, 0.5);
-				}
-			}
-		}
+		display: block;
 	}
 }
 .panel-settings {
