--- a/app/styles/sass/blocks/slider-services.scss
+++ b/app/styles/sass/blocks/slider-services.scss
@@ -3,28 +3,15 @@
 	padding-top: calc($index * .5);
 	&__container {
 		position: relative;
-		max-width: calc($index * 32);
+		//max-width: calc($index * 32  * $coaficent-md);
+		max-width: 95vw;
 		margin: 0 auto;
+		padding-bottom: calc($index * 2);
 	}
 
 	.swiper-button-prev,
 	.swiper-button-next {
-		width: calc($index * 1.03);
-		height: calc($index * 1.46);
-		background-color: $black;
-		border: 1px solid #8f8f8f;
-		transition: background-color 0.25s ease,  border 0.25s ease;
-		top: calc($index * 7);
-		@media (any-hover: hover) {
-			&:hover {
-				background-color: lighten($black, 5%);
-				border: 1px solid lighten(#8f8f8f, 5%);
-			}
-		}
-		&::after {
-			color: #f5f5f5;
-			font-size: calc($index * 0.6);
-		}
+		display: none;
 	}
 
 	.swiper-button-prev {
@@ -34,16 +21,59 @@
 	.swiper-button-next {
 		right: 0;
 	}
+	@include media-breakpoint-up(sm) {
+		padding-top: calc($index * .5);
+		&__container {
+			max-width: calc($index * 32);
+		}
+	
+		.swiper-button-prev,
+		.swiper-button-next {
+			display: flex;
+			width: calc($index * 1.03);
+			height: calc($index * 1.46);
+			background-color: $black;
+			border: 1px solid #8f8f8f;
+			transition: background-color 0.25s ease,  border 0.25s ease;
+			top: calc($index * 7);
+			@media (any-hover: hover) {
+				&:hover {
+					background-color: lighten($black, 5%);
+					border: 1px solid lighten(#8f8f8f, 5%);
+				}
+			}
+			&::after {
+				color: #f5f5f5;
+				font-size: calc($index * 0.6);
+			}
+		}
+	}
+	@include media-breakpoint-up(lg) {
+		padding-top: calc($index * .5);
+		&__container {
+			max-width: calc($index * 32);
+		}
+	
+		.swiper-button-prev,
+		.swiper-button-next {
+			width: calc($index * 1.03);
+			height: calc($index * 1.46);
+			top: calc($index * 7);
+			&::after {
+				font-size: calc($index * 0.6);
+			}
+		}		
+	}
 }
 
 .slider-services {
-	max-width: calc($index * 23.3);
+	min-width: 100%;
 	// .slider-services__slide
 
 	&__slide {
 		width: 100%;
 		text-align: center;
-		font-size: calc($index * .6);
+		font-size: calc($index * .6  * $coaficent-md);
 		display: flex;
 		flex-direction: column;
 		user-select: none;
@@ -52,7 +82,7 @@
 	// .slider-services__img
 
 	&__img {
-		margin-bottom: calc($index * .83);
+		margin-bottom: calc($index * .83 * $coaficent-md);
 		img {
 			display: block;
 			width: 100%;
@@ -65,9 +95,10 @@
 
 	&__title {
 		font-family: raleway-tm, sans-serif;
+		margin-bottom: calc($index * 1 * $coaficent-md);
 		h3 {
 			font-weight: 500;
-			font-size: calc($index * .8);
+			font-size: calc($index * .8  * $coaficent-sm);
 			line-height: 1.3;
 			text-align: center;
 			text-transform: uppercase;
@@ -76,11 +107,66 @@
 
 		p {
 			font-weight: 300;
-			font-size: calc($index * .6);
+			font-size: calc($index * .6  * $coaficent-sm);
 			line-height: 1.3;
 			text-align: center;
 			color: rgba(#f5f5f5, 0.65);
 			margin: 0;
+		}
+	}
+	@include media-breakpoint-up(sm) {
+		max-width: calc($index * 23.3);
+		min-width: auto;
+		// .slider-services__slide
+	
+		&__slide {
+			font-size: calc($index * .6 );
+		}
+	
+		// .slider-services__img
+	
+		&__img {
+			margin-bottom: calc($index * .83);
+		}
+	
+		// .slider-services__title
+	
+		&__title {
+			margin-bottom: calc($index * 1);
+			h3 {
+				font-size: calc($index * .8);
+			}
+	
+			p {
+				font-size: calc($index * .6);
+			}
+		}
+	}
+	@include media-breakpoint-up(lg) {
+		max-width: calc($index * 23.3);
+		// .slider-services__slide
+	
+		&__slide {
+			font-size: calc($index * .6);
+		}
+	
+		// .slider-services__img
+	
+		&__img {
+			margin-bottom: calc($index * .83);
+		}
+	
+		// .slider-services__title
+	
+		&__title {
+			margin-bottom: calc($index * 1);
+			h3 {
+				font-size: calc($index * .8);
+			}
+	
+			p {
+				font-size: calc($index * .6);
+			}
 		}
 	}
 }
@@ -106,12 +192,50 @@
 
 	&__item {
 		flex: 0 1 auto;
-		height: calc($index * 5.66);	
+		width: calc($index * 5.66);	
+		height: calc($index * 5.66);
 		position: relative;
 		img {
 			display: block;
 			width: 100%;
+			height: 100%;
 			object-fit: cover;
 		}
 	}
+
+	@include media-breakpoint-up(lg) {
+		margin: 0 auto;
+
+		// .slider-services-logo__slide
+	
+		&__slide {
+			min-height: 1px;
+		}
+	
+		// .slider-services-logo__items
+	
+		&__items {
+			display: flex;
+			justify-content: center;
+			gap: calc($index * 2.33);
+		}
+	
+		// .slider-services-logo__item
+	
+		&__item {
+			flex: 0 1 auto;
+			width: calc($index * 5.66);	
+			height: calc($index * 5.66);
+			position: relative;
+			img {
+				display: block;
+				width: 100%;
+				height: 100%;
+				object-fit: cover;
+			}
+		}
+		
+	}
+
 }
+
